[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/dyn_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/customize.gd" type="Script" id=2]
[ext_resource path="res://Scenes/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Objects/arrow.png" type="Texture" id=4]
[ext_resource path="res://Resources/Objects/joystick_base.png" type="Texture" id=5]
[ext_resource path="res://Resources/Icons/prot1_icon.png" type="Texture" id=6]

[node name="customize" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "CUSTOMIZATION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -504.0
margin_top = 64.0
margin_right = 8.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "Protagonist Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control_title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 64.0
margin_right = 512.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "Controller Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controller_settings" type="Node2D" parent="."]

[node name="dpad" type="Button" parent="controller_settings"]
margin_left = 704.0
margin_top = 192.0
margin_right = 768.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="controller_settings/dpad"]
margin_top = 4.0
margin_right = 512.0
margin_bottom = 516.0
rect_scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cpad" type="Button" parent="controller_settings"]
margin_left = 704.0
margin_top = 384.0
margin_right = 768.0
margin_bottom = 448.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="controller_settings/cpad"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_settings" type="Node2D" parent="."]

[node name="prot1" type="Button" parent="player_settings"]
margin_left = 192.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 276.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="player_settings/prot1"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_right = 256.0
margin_bottom = 64.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back"]
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
align = 1
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="controller_settings/dpad" to="." method="_on_dpad_pressed"]
[connection signal="pressed" from="controller_settings/cpad" to="." method="_on_cpad_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
